--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
  
     Name:<br>
     <input type="text" name="text1" value=" "><br>
-    Last name:<br>
+    Years:<br>
     <input type="text" name="text2" value=" "><br><br>
     <input type="submit" value="Submit">
   </form> 
